manifests-failed/brm-backend-0.1.0.tgz-manifest.yaml
---
# Source: brm-backend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: denizbank-brm-rest-api
  labels:
    app: denizbank-brm-rest-api
spec:
  selector:
    app: denizbank-brm-rest-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
---
# Source: brm-backend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: denizbank-brm-rest-api
  name: denizbank-brm-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: denizbank-brm-rest-api
  strategy: { }
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: denizbank-brm-rest-api
    spec:
      containers:
        - image: 
          name: 
          resources:
            limits:
              cpu: 2
              memory: "4Gi"
            requests:
              cpu: 1
              memory: "2Gi"
          ports:
            - containerPort: 8080
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: { }
---
# Source: brm-backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  namespace: brm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brm-backend
                port:
                  number: 80
